# flutter_mcap_parser

./: CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  build.sh  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  analysis_options.yaml  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/debuggerx/flutter_mcap_parser_example/: MainActivity.kt
example/assets/: test.mcap
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_mcap_parser.podspec
lib/: flutter_mcap_parser.dart
lib/src/: parser.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: parser.dart  parser.freezed.dart
linux/: CMakeLists.txt
macos/: flutter_mcap_parser.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: parser.rs
windows/: CMakeLists.txt
